# Runewire

./: .buildbouncer.yaml  .gitignore  Directory.Build.targets  README.md  Runewire.sln  demo-recipe.json
.buildbouncer/: config.yaml
.github/workflows/: build-and-test.yml
Runewire.Orchestrator.Tests/: Runewire.Orchestrator.Tests.csproj
TestResults/247d4f3e-145b-41cc-8fa6-e244361ad171/: coverage.cobertura.xml
TestResults/268904b4-03bd-4131-9bbf-58c3cb840de1/: coverage.cobertura.xml
TestResults/293da801-aefd-4178-80cf-bf5bd15d4e6b/: coverage.cobertura.xml
TestResults/2d8e338b-3b45-4b9b-9a68-cf43f745cfac/: coverage.cobertura.xml
TestResults/385864f8-8615-4fef-b18d-38f7703e71cc/: coverage.cobertura.xml
TestResults/7b204935-aba1-43db-9002-fc797bfd6e6c/: coverage.cobertura.xml
TestResults/950c124c-5a47-4305-9b1f-db8abdda29a2/: coverage.cobertura.xml
TestResults/b2558d91-4a68-44af-8d5f-995702ced526/: coverage.cobertura.xml
TestResults/ba901c8b-73e2-40c4-827f-0e90c60dc3bb/: coverage.cobertura.xml
TestResults/d0eba389-caf5-4e1d-8a75-e92949e41d63/: coverage.cobertura.xml
TestResults/d17051cb-fd61-4d10-a9a8-c828ad4adb49/: coverage.cobertura.xml
TestResults/d60e5d79-ef03-4d39-b726-bd3a99408b4e/: coverage.cobertura.xml
TestResults/e74a0d0c-3f0b-42cd-9fd3-be05f133a5e4/: coverage.cobertura.xml
TestResults/ee2b02bd-bfb2-43a0-a5a7-f72b878ccec4/: coverage.cobertura.xml
TestResults/f1141b0a-6884-433a-809c-869d0bd54c4d/: coverage.cobertura.xml
TestResults/f1226e75-e8b8-435e-b010-1c4097e07d4f/: coverage.cobertura.xml
demos/recipes/: self-apc.yaml  self-createremotethread.yaml  self-reflective.yaml  self-shellcode.yaml  self-suite.yaml
native/: CMakeLists.txt
native/Runewire.Injector/: CMakeLists.txt
native/Runewire.Injector/include/: runewire_injector.h
native/Runewire.Injector/src/: handler_payloads.cpp  handler_payloads.h  handler_process.cpp  handler_process.h  handler_redirects.cpp  handler_redirects.cpp (already existing)  handler_redirects.h  handler_threads.cpp  handler_threads.h  module_utils.cpp  module_utils.h  ntdll_utils.cpp  ntdll_utils.h  param_parser.cpp  param_parser.h  payload_utils.cpp  payload_utils.h  pe_utils.cpp  pe_utils.h  process_utils.cpp  process_utils.h  remote_memory.cpp  remote_memory.h  runewire_injector.cpp  technique_dispatch.cpp  technique_dispatch.h  thread_utils.cpp  thread_utils.h
native/Runewire.Injector/tests/: CMakeLists.txt  rw_inject_tests.cpp
src/Runewire.Agent/: Program.cs  Runewire.Agent.csproj  Worker.cs
src/Runewire.Cli/: AssemblyInfo.cs  Program.cs  Runewire.Cli.csproj
src/Runewire.Core.Infrastructure/: Runewire.Core.Infrastructure.csproj
src/Runewire.Orchestrator/: Runewire.Orchestrator.csproj
src/Runewire.Orchestrator.Infrastructure/: Runewire.Orchestrator.Infrastructure.csproj
src/Runewire.Server/: Runewire.Server.http  WeatherForecast.cs
src/Runewire.Studio/: App.axaml  App.axaml.cs  (+4 more)
(+139 files in other folders)
